added the department-employees-component but it cannot render the list